@@ -111,14 +111,14 @@ $sort_i=0; // Used in sorting on lightbox_print_media_row.php page
 //------------------------------------------------------------------------------
 // Start Main Table
 //------------------------------------------------------------------------------
-echo "<table border='0' width='100%'><tr>", "\n\n";
+echo "<table border='0' width='100%' cellpadding=\"0\" ><tr>", "\n\n";
 
 //------------------------------------------------------------------------------
 // Build Thumbnail Rows
 //------------------------------------------------------------------------------
 	echo "<td valign=\"top\" >";
-		echo "<table width=\"100%\"><tr>";
-		echo "<td valign=\"top\" >";
+		echo "<table width=\"100%\" cellpadding=\"0\" ><tr>";
+		echo "<td width=\"100%\" valign=\"top\" >";
 		for ($t=1; $t <=5; $t++) {
 			if ($t==1) {
 				lightbox_print_media($pid, 0, true, 1);
@@ -149,13 +149,13 @@ echo "<table border='0' width='100%'><tr>", "\n\n";
 // Build Relatives navigator from includes/controllers/individual_ctrl
 //------------------------------------------------------------------------------
 	echo '<td valign="top" align="center" width="220">', "\n" ;
-	echo "<table><tr><td>";
-		echo "<table ><tr><td class=\"optionbox\" align=\"center\">";
+	//echo "<table cellpadding=\"0\" ><tr><td>";
+		echo "<table cellpadding=\"0\" STYLE=\"margin-top:2px; margin-left:-5px;\" ><tr><td class=\"optionbox\" align=\"center\">";
 		echo "<b>{$pgv_lang['view_lightbox']}</b><br /><br />" . "\n" ;
 			$controller->lightbox();	 
 		echo "<br />";
 		echo "</td></tr></table>";
-	echo "</td></tr></table>";
+	//echo "</td></tr></table>";
 	echo "</td>" . "\n\n" ;
 // -----------------------------------------------------------------------------
 // end Relatives navigator
